1.0.0: fix  crash, pets on search, ffectarnings/rosshair layout, astxp via tick, its checkbox